tests/paczka1/fuzzy1/95917147.err
Error in line 4: 0F1 A347 42,2
Error in line 3: A347 S377 73,5
Error in line 7: 4WOe8eSE A347 78,0
Error in line 13: 0F1 S377 67,8
Error in line 12: A347 A578 52,3
Error in line 39: c3XnFwgEQ S377 49,90
